# media_storage

./: makefile  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 3b7e017ae38c_init.py  d4946bb2b5a1_added_new_table_posts.py  d4f4b3454775_init.py
src/: database.py  docker-compose.yml  main.py
src/api/v1/: category_api.py  misc.py  post_api.py
src/configs/: __init__.py  app.py
src/models/: __init__.py  base.py  category.py  categoty.py  post.py
src/repositories/: category.py  posts.py
src/schemas/: category_schemas.py  post_schema.py
src/services/: category_service.py  post_service.py
